--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,4 @@
+
 <resources>
     <string name="app_name">DotExtras</string>
 <!-- RECENTS SECTION -->
@@ -21,6 +22,7 @@
     <string name="immersive_recents_fullscreen">Fullscreen</string>
     <string name="immersive_recents_statusbar">Statusbar only</string>
     <string name="immersive_recents_navbar">Navbar only</string>
+
 
     <!-- Recents Membar -->
     <string name="systemui_recents_mem_display_title">Show Memory Bar</string>
@@ -112,6 +114,9 @@
     <string name="qs_expand_indicator_summary">Disable the expand indicator in the header</string>
     <string name="qs_top_icon_hide">Toggle visibility od qs top icons</string>
 
+	<!-- Notifications -->
+    <string name="notifications_title">Notifications</string>
+	
 <!-- MISC SECTION -->
     <!-- Disable FC notifications -->
     <string name="disable_fc_notifications_title">Disable force close</string>
