--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -94,6 +94,8 @@
     <string name="status_bar_icons_title">Status bar icons</string>
     <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
 
+
+<!-- QS SECTION -->
     <!-- Quick settings tiles -->
     <string name="sysui_qqs_count_title">Small QS tiles</string>
     <string name="qs_rows_portrait_title">No. of Rows (portrait)</string>
@@ -103,6 +105,22 @@
 
     <string name="torch_long_press_power_gesture_title">Long-press power button for torch</string>
     <string name="torch_long_press_power_gesture_desc">Activate the torch by long-pressing the power button while the display is off</string>
+
+    <!-- Headers -->
+    <string name="status_bar_header_title">Headers</string>
+    <string name="status_bar_custom_header_title">Custom header image</string>
+    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
+    <string name="daylight_header_pack_title">Header image pack</string>
+    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
+    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
+    <string name="unit_percent">\u0025</string>
+    <string name="static_header_provider" translatable="false">static</string>
+    <string name="daylight_header_provider" translatable="false">daylight</string>
+    <string name="static_header_provider_title">Static</string>
+    <string name="daylight_header_provider_title">Dynamic</string>
+    <string name="custom_header_provider_title">Header provider</string>
+    <string name="custom_header_browse_title">Browse installed headers</string>
+    <string name="custom_header_browse_summary">Long press on any image to use for static mode</string>
 
 <!-- MISC SECTION -->
     <!-- Disable FC notifications -->
